--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar-brand{
+  color: #4e57f6;
+  /* text-shadow: 2px red; */
+  font-style: italic;
+}
